<resources>
    <string name="app_name">Tienditav2</string>
    <string name="title_home">INICIO</string>
    <string name="title_dashboard">PRODUCTOS</string>
    <string name="title_notifications">CARRITO</string>
    <string name="registrate">Regístrate</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="correo">Correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta? Inicia Sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inicia_sesion">Inicia Sesión</string>
    <string name="correo_usuario">Correo, Celular o Usuario</string>
    <string name="olvidaste_contrasena">Olvidaste la contraseña?</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="o_inicia_con">O Inicia Sesión con:</string>
    <string name="registrate_aqui">Regístrate Aquí</string>
    <string name="logo_description">Logo de la aplicación</string>
    <string name="google_login">Iniciar sesión con Google</string>
    <string name="title_activity_registro" />

</resources>